new selectors and header
/styles.css/
added selector .introcontainer
added section in "global

/index.html/
added header elemental in 112

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,6 +25,10 @@ body {
   box-shadow: 0 0 2px 2px #e5e5e5, 0 0 10px #e5e5e5;
 }
 
+section {
+  padding: 4rem;
+}
+
 /* == Generelles == */
 
 .clearfix::after {
@@ -50,6 +54,23 @@ body {
   border: 2px solid #A62C21;
   color: #FFF;
   padding: .4rem .6rem;
+}
+
+.intro-container {
+  text-align: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2.5rem;
+}
+
+.intro-container>h1 {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
+
+.intro-container>p {
+  font-size: 1.2rem;
 }
 
 /* === Navigationsleiste === */
