--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -56,6 +56,25 @@ section {
   padding: .4rem .6rem;
 }
 
+.btn-typ-1:hover {
+  background-color: #A62C21;
+  border: 2px solid #fff;
+}
+
+.btn-typ-2 {
+  border: 2px solid #fff;
+  background-color: transparent;
+  color: #FFF;
+  padding: .4rem .6rem;
+}
+
+.btn-typ-2:hover {
+  color: #a62c21;
+  text-decoration: none;
+  font-weight: bold;
+  border: 2px solid #a62c21;
+}
+
 .intro-container {
   text-align: center;
   width: 80%;
@@ -216,6 +235,59 @@ section {
   height: 0;
   padding-top: 15.625%;
   background-size: contain;
+}
+
+/* === Leistungen-Bereich === */
+
+.leistungs-box {
+  background-color: #3d3f45;
+  text-align: center;
+  color: #fff;
+  padding: 1rem 3rem 2.5rem;
+  width: 70%;
+  margin-bottom: 1.6rem;
+}
+
+.leistungs-box>h2 {
+  font-size: 1.4rem;
+}
+
+#leistungen-bereich .row>.col-3:nth-of-type(even)>.leistungs-box {
+  margin-left: 1rem;
+  margin-right: auto;
+}
+
+#leistungen-bereich .row>.col-3:nth-of-type(odd)>.leistungs-box {
+  margin-right: 1rem;
+  margin-left: auto;
+}
+
+.leistung-ansehen-btn {
+  text-decoration: none;
+  height: 40px;
+  display: inline-block;
+  padding-top: 0.5rem;
+  width: 40%;
+  margin-top: 1rem;
+}
+
+.leistung-ansehen-btn:link {
+  color: #fff;
+}
+
+.leistung-ansehen-btn:visited {
+  color: #fff;
+}
+
+.leistung-ansehen-btn:active {
+  color: #fff;
+}
+
+.leistung-ansehen-btn:hover {
+  color: #a62c21;
+  text-decoration: none;
+  font-weight: bold;
+  border: 2px solid #a62c21;
 }
 
 /* === grid-system sichtbar machen ===
