media-q video-bereich
added media-queries for video-bereich

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -199,7 +199,9 @@ section {
   padding-bottom: 0;
 }
 
-#header-nav .container, #header-nav .row, #header-nav .col-6 {
+#header-nav .container,
+#header-nav .row,
+#header-nav .col-6 {
   height: 100%;
 }
 
@@ -460,6 +462,45 @@ text-align: center;
   #nb-btn {
     height: 25px;
     padding: .1rem;
+  }
+}
+
+/*=== Video-Bereich ===  */
+
+#video-bereich {
+  background-color: #3d3f45;
+  color: #fff;
+}
+
+#video-bereich video {
+  width: 35%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+@media (max-width:1440px) {
+  #video-bereich video {
+    width: 45%;
+  }
+}
+
+@media (max-width:1024px) {
+  #video-bereich video {
+    width: 60%;
+  }
+}
+
+@media (max-width:768px) {
+  #video-bereich video {
+    width: 75%;
+  }
+}
+
+@media (max-width:480px) {
+  #video-bereich video {
+    width: 100%;
   }
 }
 
