--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,7 @@ body {
 
 :focus {
   outline: none;
-  box-shadow: 0 0 2px 2px #e5e5e5, 0 0 10px #e5e5e5;
+  box-shadow: 0 0 2px 2px #f0f0f0, 0 0 10px #f0f0f0;
 }
 
 section {
@@ -502,6 +502,31 @@ text-align: center;
   #video-bereich video {
     width: 100%;
   }
+}
+
+/* === Service-Bereich === */
+
+#service-bereich {
+  background-color: #f0f0f0;
+}
+
+.service-box {
+  text-align: center;
+  width: 80%;
+}
+
+.service-box h1 {
+  font-size: 1.4rem;
+}
+
+#service-bereich .row:nth-of-type(2)>.col-2:first-of-type .service-box {
+  margin-right: 0;
+  margin-left: auto;
+}
+
+#service-bereich .row:nth-of-type(2)>.col-2:nth-of-type(2) .service-box {
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* === grid-system === */
