--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -529,6 +529,20 @@ text-align: center;
   margin-left: auto;
 }
 
+.service-icon {
+  width: 120px;
+  height: 120px;
+  background-color: #3d3f45;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#guenstig-icon {
+  background: url(../src/img/"services-sprite.png")
+}
+
+#schnell-icon
 /* === grid-system === */
 
 .container {
