--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -549,6 +549,19 @@ text-align: center;
   background: #3d3f45 url("./../img/services-sprite.png") left -240px top 0;
 }
 
+@media (max-width:768px) {
+  #service-bereich>.container>.row:nth-of-type(2)>.col-2>.service-box {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media (max-width:480px) {
+  .service-box {
+    width: 100%;
+  }
+}
+
 /* === grid-system === */
 
 .container {
