--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -562,6 +562,31 @@ text-align: center;
   }
 }
 
+/* === Über uns Bereich === */
+
+#über-uns-bereich {
+  background-color: #fff;
+}
+
+#über-uns-container {
+  position: relative;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#über-uns-container>img {
+  position: absolute;
+  top: 0;
+  right: 100px;
+  height: 100%
+}
+
+#über-uns-container>p {
+  width: 75%;
+  font-size: 1.2rem;
+}
+
 /* === grid-system === */
 
 .container {
