--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -587,6 +587,35 @@ text-align: center;
   font-size: 1.2rem;
 }
 
+@media (max-width:1440px) {
+  #über-uns-container>img {
+    right: 50px;
+  }
+}
+
+@media (max-width:1280px) {
+  #über-uns-container>img {
+    right: 0;
+  }
+}
+
+@media (max-width:1140px) {
+  #über-uns-container>p {
+    width: 70%
+  }
+}
+
+@media (max-width:1024px) {
+  #über-uns-container>img {
+    display: none;
+  }
+  #über-uns-container>p {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 /* === grid-system === */
 
 .container {
