--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -579,7 +579,7 @@ text-align: center;
   position: absolute;
   top: 0;
   right: 100px;
-  height: 100%
+  height: 100%;
 }
 
 #über-uns-container>p {
