--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -655,6 +655,146 @@ text-align: center;
   }
 }
 
+/* === Leistungen-Seite=== */
+
+.flex-container {
+  display: flex;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.flex-container>.intro-container {
+  width: 100%;
+}
+
+/* @media (max-width:1024px) {
+  .flex-container {
+    width: 100%;
+    padding-right: : 4rem;
+    padding-left: 4rem;
+  }
+} */
+
+.leistungs-box {
+  background-color: #3d3f45;
+  flex-basis: 27.5%;
+  color: #fff;
+  padding: 2rem 4rem;
+  text-align: center;
+  min-height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.leistungs-box-empfohlen {
+  flex-basis: 30%;
+  min-height: 750px;
+  box-shadow: 0 0 20px 0 #3d3f45;
+  font-size: 1.05rem;
+}
+
+@media (max-width:1782px) {
+  .leistungs-box {
+    flex-basis: 27.5%;
+  }
+  .leistungs-box-empfohlen {
+    flex-basis: 30%;
+  }
+}
+
+@media (max-width:1622px) {
+  .leistungs-box {
+    flex-basis: 30%;
+  }
+  .leistungs-box-empfohlen {
+    flex-basis: 32.5%;
+  }
+}
+
+@media (max-width:1488px) {
+  .leistungs-box {
+    padding: 1rem 2rem;
+  }
+  .flex-container {
+    align-items: stretch;
+  }
+  .leistungs-box-empfohlen {
+    min-height: initial;
+  }
+}
+
+@media (max-width:1088px) {
+  .flex-container {
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+  }
+  .leistungs-box {
+    margin-bottom: 2rem;
+    min-height: initial;
+    padding: 2rem 4rem;
+  }
+}
+
+@media (max-width:768px) {
+  .flex-container {
+    width: 90%;
+  }
+}
+
+/* @media (max-width:618px) {
+  .flex-container {
+    padding: 0;
+  }
+  .leistungs-box {
+    padding: 1rem 2rem;
+  }
+} */
+
+@media (max-width:409px) {
+  .leistungs-box {
+    padding: 1rem 2rem;
+  }
+}
+
+@media (max-width:338px) {
+  .leistungs-box {
+    padding: .5rem 1rem 2 1rem;
+  }
+}
+
+.leistungs-box h1 {
+  margin-bottom: 0;
+  margin-top: 1.2rem;
+}
+
+.leistungs-box ul {
+  padding: 0;
+}
+
+.leistungs-box ul>li {
+  list-style-position: inside;
+  margin-bottom: .5rem;
+}
+
+.leistung-auswählen-btn {
+  width: 50%;
+  min-width: 170px;
+  height: 2.5rem;
+  font-size: 1rem;
+  margin-top: .5rem;
+  margin-bottom: 1.2rem;
+}
+
+.leistung-auswählen-btn:hover {
+  font-weight: normal;
+}
+
 /* === grid-system === */
 
 .container {
