--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -285,6 +285,61 @@ section {
   background-size: contain;
 }
 
+/* === animiertes-logo === */
+
+@keyframes logo-animation {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  11.11% {
+    transform: rotateZ(0deg);
+  }
+  22.22% {
+    transform: rotateZ(90deg);
+  }
+  33.33% {
+    transform: rotateZ(90deg);
+  }
+  44.44% {
+    transform: rotateZ(180deg);
+  }
+  55.55% {
+    transform: rotateZ(180deg);
+  }
+  66.66% {
+    transform: rotateZ(270deg);
+  }
+  77.77% {
+    transform: rotateZ(270deg);
+  }
+  88.88% {
+    transform: rotateZ(360deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.animiertes-logo {
+  height: 150px;
+  width: 150px;
+  background-color: #3d3f45;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4rem;
+  padding: 25px;
+  animation: logo-animation 7s ease-in-out infinite alternate;
+}
+
+.animiertes-logo>img {
+  display: block;
+  height: 100px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* === Leistungen-Bereich === */
 
 .leistungen {
@@ -545,6 +600,8 @@ text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
+
+.service-icon:hover {}
 
 #guenstig-icon {
   background: #3d3f45 url("./../img/services-sprite.png") left 0 top 0;
